# hosts-manager

./: .gitignore  .gitmessage  .golangci.yml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY_TEST_RESULTS.md  coverage_all.out  go.mod  package.json  pyproject.toml
.github/: dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  dependency-review.yml  release.yml  semantic-release.yml
cmd/hosts-manager/: commands.go  commands_test.go  main.go
hosts_manager/: cli.py  editor.py  interactive.py
internal/audit/: audit.go  audit_test.go  rotation_test.go
internal/backup/: backup.go  backup_test.go
internal/config/: config.go  config_test.go  validator.go  validator_test.go
internal/errors/: sanitizer.go  sanitizer_test.go
internal/hosts/: atomic.go  atomic_test.go  atomic_unix.go  atomic_windows.go  hosts_test.go  parser.go  types.go  validation.go  validation_test.go
internal/tui/: tui.go  tui_test.go
pkg/platform/: platform.go  platform_test.go
pkg/search/: search.go  search_test.go
