[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hosts-manager"
version = "1.2.0"
description = "A CLI tool to manage /etc/hosts with section toggling and diff preview"
readme = "README.md"
authors = [{ name = "Brandon H" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "InquirerPy>=0.3"
]

[project.scripts]
hosts-manager = "hosts_manager.cli:cli"
